--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "axios": "^1.1.3",
     "babel-plugin-preval": "^5.1.0",
     "bootstrap": "^5.2.2",
+    "dotenv": "^16.0.3",
     "fs": "^0.0.1-security",
     "react": "^18.2.0",
     "react-bootstrap": "^2.5.0",
